--- a/src/main/webapp/Views/Secured/Transaction/CreateTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Transaction/CreateTransaction.xhtml
@@ -131,7 +131,7 @@
 
 			<b:row>
 			<b:column span="6">
-			<p:outputLabel for="idType" value="Transaction Type: " />
+			<b:label text="Transaction Type:" />
 			</b:column>
 			
 			<b:column span="6">
@@ -146,10 +146,15 @@
 			</b:row>
 			
 			<b:row>
+			
+			<b:column span="6">
+			<b:label text="Transaction Date" />
+			</b:column>
 			<b:column span="6">
 			<p:calendar  placeholder="Select Transaction Date" pattern="MM/dd/yyyy HH:mm:ss"
 			 value="#{createTransactionController.transaction.transactionDate}" required="true" />
 			</b:column>
+			
 			</b:row>
 			
 			<br />
@@ -198,6 +203,11 @@
 	position: absolute !important;
 	left: 15% !important;
 
+}
+
+.hasDatepicker {
+
+width:100%;
 }
 
 </style>				
