--- a/src/main/webapp/Views/Secured/Provider/ProviderCreateView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderCreateView.xhtml
@@ -123,13 +123,13 @@
 								<b:panelGrid colSpans="4,8">
 								
 								<b:label text="CAQH Id" />
-								<b:inputText required="true"
+								<b:inputText
 											requiredMessage="CAQH Id cannot be empty"
 											placeholder="CAQH Id *"
 											value="#{createProviderController.provider.CAQHId}" />
 											
 											<b:label text="CAQH Password" />
-											<b:inputSecret required="true"
+											<b:inputSecret
 											requiredMessage="CAQH password cannot be empty"
 											placeholder="CAQH Password *"
 											value="#{createProviderController.provider.CAQHPassword}" />
