--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -98,16 +98,16 @@
 
 						<p:column headerText="Payer Plan Name" filterBy="#{transaction.payer.name}" filterFunction="#{transaction.filterByPayer}">
 						 
-						 <ui:repeat var="plan" value="#{transaction.plans.toArray()}">
+						
 						 <b:row>
 						 <b:column span="6">
 						 #{transaction.payer.name}
 						 </b:column>
 						 <b:column span="6">
-						 #{plan.name}
+						 #{transaction.plan.name}
 						 </b:column>
 						 </b:row>
-						 </ui:repeat>							
+												
 						</p:column> 
 						
 						<!-- <p:column headerText="Practice Name">
