--- a/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
@@ -69,7 +69,7 @@
 					
 					 <!-- filterBy="#{transaction.payer.getName}" filterMatchMode="contains" -->
 						 <p:column headerText="Payer Name">
-							#{transaction.payer.name}
+							#{transaction.payer.name}, #{transaction.id}
 						</p:column>
 						
 						 <p:column headerText="Plan">
@@ -77,7 +77,7 @@
 						 
 						 <tr>
 						 <td>
-						 #{transaction.plan.name}
+						 #{transaction.plan.name},#{transaction.plan.id}
 						 </td>
 						 </tr>
 						 </table>
