--- a/src/main/webapp/Views/Secured/Reports/ReportPractice.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportPractice.xhtml
@@ -116,8 +116,8 @@
 							#{transaction.provider.name}
 						</p:column> -->
 
-						<p:column headerText="Status" filterMatchMode="startsWith" filterBy="#{transaction.parStatus}">
-							#{transaction.parStatus}
+						<p:column headerText="Status" filterMatchMode="startsWith" filterBy="#{transaction.transactionState}">
+							#{transaction.transactionState}
 						</p:column>
 		
 					</p:dataTable>
