--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -101,10 +101,11 @@
 						
 						 <b:row>
 						 <b:column span="6">
-						 #{transaction.payer.name} #{transaction.payer.id}
-						 </b:column>
+						 #{transaction.payer.name}
+						</b:column>
 						 <b:column span="6">
-						 #{transaction.plan.name}, #{transaction.plan.id}, #{transaction.plan.payer.id}
+						 #{transaction.plan.name}
+						 <!-- #{transaction.plan.id}, #{transaction.plan.payer.id} -->
 						 </b:column>
 						 </b:row>
 												
@@ -114,8 +115,8 @@
 							#{transaction.practice.name}
 						</p:column>	 -->				
 						
-						<p:column headerText="Status" filterMatchMode="startsWith" filterBy="#{transaction.parStatus}">
-							#{transaction.parStatus}
+						<p:column headerText="Status" filterMatchMode="startsWith" filterBy="#{transaction.transactionState}">
+							#{transaction.transactionState}
 						</p:column>
 		
 					</p:dataTable>
